<resources>
    <string name="app_name">Parcel Tracking</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">about</string>
    <string name="action_scanning">Express</string>
    <string name="button_add_text">add</string>
    <string name="button_add_parcel">add</string>
    <string name="textview_barcode">Bar Code</string>
    <string name="editview_barcode_hind">Input a Bar Code</string>
    <string name="button_add_code">Input a Bar Code</string>
    <string name="title_activity_parcel">ParcelActivity</string>
    <string name="title_activity_add_parcel">AddParcelActivity</string>
    <string name="title_activity_add_customer">AddCustomerActivity</string>
    <string name="activity_add_customer_name">Name</string>
    <string name="activity_add_customer_address">Address</string>
    <string name="activity_add_customer_phone">Phone</string>
    <string name="activity_add_customer_note">Note</string>
    <string name="activity_record_title">Track Record</string>
    <string name="activity_add_customer_name_hint">Input a Name</string>
    <string name="activity_add_customer_address_hint">Input an Address</string>
    <string name="activity_add_customer_phone_hint">Input a Phone Number</string>
    <string name="activity_add_customer_note_hint">Input a Note</string>
    <string name="activity_add_customer_add">add</string>
    <string name="activity_add_customer_confirm">confirm</string>
    <string name="activity_add_parcel_barcode">BarCode</string>
    <string name="activity_add_parcel_note">Note</string>
    <string name="activity_add_parcel_barcode_hint">Input or Scan a Bar Code</string>
    <string name="activity_add_parcel_note_hint">Input a note</string>
    <string name="activity_add_parcel_confirm">confirm</string>
    <string name="activity_add_parcel_scan">scan</string>
    <string name="activity_add_parcel_company">choose company: </string>
    <string name="activity_add_parcel_photo">Add photo: </string>
    <string name="activity_show_photo_show">show Photo</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="activity_customer_title">Customer</string>
    <string name="activity_customer_name">Name</string>
    <string name="activity_customer_address">Address</string>
    <string name="activity_customer_phone">Phone</string>
    <string name="activity_customer_note">Note</string>
    <string name="activity_customer_none_name">Someone</string>
    <string name="activity_parcel_time">Date</string>
    <string name="activity_parcel_number">Parcel Number</string>
    <string name="activity_parcel_note">Note</string>
    <string name="activity_parcel_commpany">Commpany</string>
    <string name="activity_welcome_words">Parcel Tracker</string>
    <string name="activity_add_customer_title">New Customer</string>
    <string name="activity_add_parcel_title_add">New Parcel</string>
    <string name="activity_add_parcel_title_edit">Edit Parcel</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_info_failure">Failed to get tracking records.</string>
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="dialog_info_over_photo">Cannot add more than %1$d photos.</string>
    <string name="dialog_info_title">Info</string>
    <string name="dialog_info_invalid">Parcel number is invalid.\nOnly following commpanies\' parcel can be queried: </string>
    <string name="title_activity_login">Sign in</string>
    <string name="activity_about_author"><b>Developer: </b>Freddie</string>
    <string name="activity_about_email"><b>Email Address: </b>freddiechenchen@gmail.com</string>
    <string name="activity_about_weixing"><b>Wechat Account: </b>freddiegooludou</string>
    <string name="activity_about_location"><b>Location: </b>Brisbane QLD AU</string>
    <string name="parcel_list">Checkout out parcel\'s status delivered by <b>EWE</b>，<b>Fast-go</b>, <b>星速递</b>，<b>转四方</b>.</string>
    <string name="action_camera_text">Camera</string>
    <string name="notification_channel_notification" translatable="false">channel_nofification</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="activity_welcome_author" translatable="false">Powered by Freddie</string>
    <string name="request_permission_camera">This App needs camera permission.</string>
    <string name="default_notification_channel_name" translatable="true">Tracker</string>
    <string-array name="commpany_array">
        <item>EWE</item>
        <item>Fast Go</item>
        <item>Star Express</item>
        <item>4PX</item>
        <item>Other</item>
    </string-array>
    <string name="commpany_name_ewe">EWE</string>
    <string name="commpany_name_freaky_quick">FQ</string>
    <string name="commpany_name_fast_go">Fast</string>
    <string name="commpany_name_Star_Ex">Star</string>
    <string name="commpany_name_changjiang">Chang</string>
    <string name="commpany_name_speed">Ysd</string>
    <string name="commpany_name_other">Other</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode com.fredroid.scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
</resources>