<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fredroid.parceltracking.AddParcelActivity"
    tools:showIn="@layout/activity_add_parcel">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">


            <EditText
                android:id="@+id/editText_addparcel_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/activity_add_parcel_barcode_hint"
                android:inputType="textPersonName" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_add_parcel_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorButton"
                    android:text="@string/activity_add_parcel_scan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorFont" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/activity_add_parcel_company"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <Spinner
                android:id="@+id/spinner_addparcel_commpany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="visible"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/activity_add_parcel_photo"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/button_add_parcel_addPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/ic_camera_alt" />


                <ImageButton
                    android:id="@+id/button_add_parcel_deletePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/ic_delete_sweep" />
            </FrameLayout>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_add_parcel_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/activity_add_parcel_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <EditText
                android:id="@+id/editText_addparcel_note"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="fill_horizontal"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:gravity="top|left"

                android:hint="@string/activity_add_parcel_note_hint"
                android:inputType="textMultiLine"
                android:textAlignment="gravity" />
        </LinearLayout>

        <Button
            android:id="@+id/button_add_parcel_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorButton"
            android:text="Add"
            android:textColor="@color/colorFont" />

    </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
